# HyperliquidSwift

./: .gitignore  Cargo.toml  Package.resolved  Package.swift  README.md  build.rs
Sources/CHyperliquidSwift/: hyperliquidFFI.h  module.modulemap
Sources/HyperliquidSwift/: hyperliquid.swift
Sources/HyperliquidSwift/include/: hyperliquidFFI.modulemap
Tests/HyperliquidSwiftTests/: HyperliquidSwiftTests.swift
src/: hyperliquid.udl  lib.rs
