[package]
name = "hyperliquid-swift"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]


[dependencies]
hyperliquid_rust_sdk = { git = "https://github.com/hyperliquid-dex/hyperliquid-rust-sdk" }
uniffi = { version = "0.28", features = ["cli"] }
uniffi_bindgen = "0.28"
camino = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"
alloy = { version = "1.0", default-features = false, features = [
  "dyn-abi",
  "sol-types", 
  "signer-local",
] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
